feature : 完善背景图片前后钩子

--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
 						},
 						customBackgroudImgBefore:function(file) {
 							console.log('customBackgroudImgBefore', file)
-							return false;
+							return true;
 						},
 						customBackgroudImgAfter:function(file) {
 							console.log('customBackgroudImgAfter', file)
