添加options.custom_showSize和custom_showCount控制选中时是否显示宽高和行列数

--- a/src/index.html
+++ b/src/index.html
@@ -1897,6 +1897,8 @@
 					}
 				}]
 			}
+			options.custom_showSize = true;
+			options.custom_showCount = true;
 			luckysheet.create(options);
 			})
 	</script>
